Version 1.4.0
-------------
    - allowed custom functions to receive Smarty object as the second
      parameter; this can be used to dynamically change template variables, for
      example. (Andrei)
    - added custom compiler functions support, register_compiler_function() and
      unregister_compiler_function() API functions. (Andrei, Ivo Jansch).
    - updated GLOBAL_ASSIGN to take SCRIPT_NAME from HTTP_SERVER_VARS
      instead of global variable. You can also assign several variables
      in one shot with an array. (Monte, Roman Neuhauser)
    - added template filters, register_filer() and unregister_filter() API
      functions. (Monte)
    - added RELEASE_NOTES file to distribution. (Monte)
    - moved CREDITS out of manual into its own file. (Monte)
    - added register_resource() and unregister_resource() API functions. (Monte)
    - changed the syntax of indexing template variables, thus supporting
      structures of arbitrary complexity; supplied fix_vars.php script to fix
      old syntax. (Andrei)
    - added $insert_tag_check to speed up cached pages if {insert ...} is not
      used. (Monte)
    - added $compiler_class variable to allow specifying a different compiler
      class. (Andrei)
    - changed Smarty to compile templates at runtime, allowing for arbitrary
      template resources. (Monte)
    - added fix for LOCK_EX under Windows and changed a couple of file
      permissions for security. (Monte)
    - allow arbitrary date strings to date_format, html_select_date and
      html_select_time (Monte)

Version 1.3.2
-------------
    - fixed a bug that caused some nested includes to loop infinitely. (Andrei)
    - added optional HTML header to output. (Monte)
    - significantly improved config_load performance. (Andrei)
    - added format attribute to math function. (Monte)
    - added html_select_time custom function. (Andrei)
    - fixed minor PHP warning when attempting to unset an unset variable
      (Monte)