@@ -1,5 +1,7 @@
 Version 1.4.0
 -------------
+    - implemented '->' syntax for accessing properties of objects passed to the
+      template. (Andrei)
     - allowed custom functions to receive Smarty object as the second
       parameter; this can be used to dynamically change template variables, for
       example. (Andrei)
